CloudFormation/aws-vpc.template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  This template creates a Multi-AZ, multisubnet VPC infrastructure with
  managed NAT gateways in the public subnet for each Availability Zone.
  If you deploy the Quick Start in an AWS Region that doesn't
  support NAT gateways, NAT instances are deployed instead.
  **WARNING** This template creates AWS resources. You will be billed for the
  AWS resources used if you create a stack from this template. (qs-1qnnspaap)
Metadata:
  LICENSE: Apache License, Version 2.0
  QuickStartDocumentation:
    EntrypointName: Launch a new VPC
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: Required Persistence Tags
        Parameters:
          - GlobalTag1
          - GlobalTag2
          - GlobalTag3
      - Label:
          default: Availability Zone configuration
        Parameters:
          - AvailabilityZones
          - NumberOfAZs
      - Label:
          default: Network configuration
        Parameters:
          - VPCCIDR
          - CreatePublicSubnets
          - PublicSubnet1CIDR
          - PublicSubnet2CIDR
          - PublicSubnetTag1
          - PublicSubnetTag2
          - CreatePrivateSubnets
          - CreateNATGateways
          - PrivateSubnet1ACIDR
          - PrivateSubnet2ACIDR
          - PrivateSubnetATag1
          - PrivateSubnetATag2
          - VPCTenancy
          - CreateInternetGateway
      - Label:
          default: VPC Flow Logs configuration
        Parameters:
          - CreateVPCFlowLogsToCloudWatch
          - VPCFlowLogsLogFormat
          - VPCFlowLogsLogGroupRetention
          - VPCFlowLogsMaxAggregationInterval
          - VPCFlowLogsTrafficType
          - VPCFlowLogsCloudWatchKMSKey
    ParameterLabels:
      CreateInternetGateway:
        default: Create Internet Gateway
      GlobalTag1:
        default: Global Tag 1
      GlobalTag2:
        default: Global Tag 2
      GlobalTag3:
        default: Global Tag 3
      AvailabilityZones:
        default: Availability Zones
      CreateNATGateways:
        default: Create NAT gateways
      CreatePrivateSubnets:
        default: Create private subnets
      CreatePublicSubnets:
        default: Create public subnets
      CreateVPCFlowLogsToCloudWatch:
        default: Create VPC flow logs (CloudWatch)
      NumberOfAZs:
        default: Number of Availability Zones
      PrivateSubnet1ACIDR:
        default: Private subnet 1A CIDR
      PrivateSubnet2ACIDR:
        default: Private subnet 2A CIDR
      PrivateSubnetATag1:
        default: Tag pair 1 for private A subnets
      PrivateSubnetATag2:
        default: Tag pair 2 for private A subnets
      PrivateSubnetBTag1:
        default: Tag pair 1 for private B subnets
      PrivateSubnetBTag2:
        default: Tag pair 2 for private B subnets
      PublicSubnet1CIDR:
        default: Public subnet 1 CIDR
      PublicSubnet2CIDR:
        default: Public subnet 2 CIDR
      PublicSubnetTag1:
        default: Tag pair 1 for public subnets
      PublicSubnetTag2:
        default: Tag pair 2 for public subnets
      VPCCIDR:
        default: VPC CIDR
      VPCFlowLogsCloudWatchKMSKey:
        default: CloudWatch Logs KMS key for VPC flow logs
      VPCFlowLogsLogFormat:
        default: VPC flow logs - log format
      VPCFlowLogsLogGroupRetention:
        default: VPC flow logs - log group retention
      VPCFlowLogsMaxAggregationInterval:
        default: VPC flow logs - max aggregation interval
      VPCFlowLogsTrafficType:
        default: VPC flow logs - traffic type
      VPCTenancy:
        default: VPC tenancy
Parameters:
  CreateInternetGateway:
    Description: "Set to true to create an Internet Gateway, false to skip creation."
    Type: String
    AllowedValues: ["true", "false"]
    Default: "true"  # Set the default value to true to create the Internet Gateway by default.
  GlobalTag1:
    Type: String
    Description: >-
      Tag to persist resources. Format 'resource:protect:till=DD-MM-YYYY' where the Date in DD-MM-YYYY format is the resource expiry date.
    AllowedPattern: ^([a-zA-Z0-9+\-._:/@]+=[a-zA-Z0-9+\-.,_:/@ *\\"'\[\]\{\}]*)?$
    ConstraintDescription: >-
      Tags must be in format 'key=value'. Keys can contain only
      [a-zA-Z0-9+\-._:/@]. Values can contain
      [a-zA-Z0-9+\-._:/@ *\\"'\[\]\{\}].
  GlobalTag2:
    Type: String
    Description: >-
      Tag to persist resources. Format 'resource:protect:owner=<OWNER>' where <OWNER> is the username you login to AWS with.
    AllowedPattern: ^([a-zA-Z0-9+\-._:/@]+=[a-zA-Z0-9+\-.,_:/@ *\\"'\[\]\{\}]*)?$
    ConstraintDescription: >-
      Tags must be in format 'key=value'. Keys can contain only
      [a-zA-Z0-9+\-._:/@]. Values can contain
      [a-zA-Z0-9+\-._:/@ *\\"'\[\]\{\}].
  GlobalTag3:
    Type: String
    Description: >-
      Project, in format 'key=value'.
    AllowedPattern: ^([a-zA-Z0-9+\-._:/@]+=[a-zA-Z0-9+\-.,_:/@ *\\"'\[\]\{\}]*)?$
    ConstraintDescription: >-
      Tags must be in format 'key=value'. Keys can contain only
      [a-zA-Z0-9+\-._:/@]. Values can contain
      [a-zA-Z0-9+\-._:/@ *\\"'\[\]\{\}].
    Default: 'Project=TDG'
  AvailabilityZones:
    Type: List<AWS::EC2::AvailabilityZone::Name>
    Description: >-
      Availability Zones to use for the subnets in the VPC. The
      specified logical order is preserved.
  CreateNATGateways:
    Type: String
    Description: >-
      Choose false when creating only private subnets. If true, both
      CreatePublicSubnets and CreatePrivateSubnets must also be true.
    AllowedValues:
      - 'true'
      - 'false'
    Default: 'true'
  CreatePublicSubnets:
    Type: String
    Description: >-
      Choose false to create only private subnets. If false,
      CreatePrivateSubnets must be true, and the CIDR parameters for all public
      subnets will be ignored.
    AllowedValues:
      - 'true'
      - 'false'
    Default: 'true'
  CreatePrivateSubnets:
    Type: String
    Description: >-
      Choose false to create only public subnets. If false, the CIDR parameters
      for all private subnets will be ignored.
    AllowedValues:
      - 'true'
      - 'false'
    Default: 'true'
  CreateVPCFlowLogsToCloudWatch:
    Type: String
    Description: >-
      Choose true to create VPC flow logs for the VPC and publish them to
      CloudWatch. If false, VPC flow logs will not be created.
    AllowedValues:
      - 'true'
      - 'false'
    Default: 'false'
  NumberOfAZs:
    Type: String
    Description: >-
      Number of Availability Zones to use in the VPC. This must match your
      selections in the AvailabilityZones parameter.
    AllowedValues:
      - '2'
      - '3'
      - '4'
    Default: '2'
  PrivateSubnet1ACIDR:
    Type: String
    Description: >-
      CIDR block for private subnet 1A located in Availability Zone 1.
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: >-
      CIDR block parameter must be in the form x.x.x.x/16-28.
    Default: 10.10.32.0/20
  PrivateSubnet2ACIDR:
    Type: String
    Description: >-
      CIDR block for private subnet 2A located in Availability Zone 2.
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: >-
      CIDR block parameter must be in the form x.x.x.x/16-28.
    Default: 10.10.48.0/20
  PrivateSubnetATag1:
    Type: String
    Description: >-
      (Optional) Tag to add to private subnets A, in format 'key=value'.
    AllowedPattern: ^([a-zA-Z0-9+\-._:/@]+=[a-zA-Z0-9+\-.,_:/@ *\\"'\[\]\{\}]*)?$
    ConstraintDescription: >-
      Tags must be in format 'key=value'. Keys can contain only
      [a-zA-Z0-9+\-._:/@]. Values can contain
      [a-zA-Z0-9+\-._:/@ *\\"'\[\]\{\}].
    Default: Network=Private
  PrivateSubnetATag2:
    Type: String
    Description: >-
      (Optional) Tag to add to private subnets A, in format 'key=value'.
    AllowedPattern: ^([a-zA-Z0-9+\-._:/@]+=[a-zA-Z0-9+\-.,_:/@ *\\"'\[\]\{\}]*)?$
    ConstraintDescription: >-
      Tags must be in format 'key=value'. Keys can contain only
      [a-zA-Z0-9+\-._:/@]. Values can contain
      [a-zA-Z0-9+\-._:/@ *\\"'\[\]\{\}].
    Default: ''
  PublicSubnet1CIDR:
    Type: String
    Description: >-
      CIDR block for the public DMZ subnet 1 located in Availability Zone 1.
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: >-
      CIDR block parameter must be in the form x.x.x.x/16-28.
    Default: 10.10.0.0/20
  PublicSubnet2CIDR:
    Type: String
    Description: >-
      CIDR block for the public DMZ subnet 2 located in Availability Zone 2.
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: >-
      CIDR block parameter must be in the form x.x.x.x/16-28.
    Default:  10.10.16.0/20
  PublicSubnetTag1:
    Type: String
    Description: >-
      (Optional) Tag to add to public subnets, in format 'key=value'.
    AllowedPattern: ^([a-zA-Z0-9+\-._:/@]+=[a-zA-Z0-9+\-.,_:/@ *\\"'\[\]\{\}]*)?$
    ConstraintDescription: >-
      Tags must be in format 'key=value'. Keys can contain only
      [a-zA-Z0-9+\-._:/@]. Values can contain
      [a-zA-Z0-9+\-._:/@ *\\"'\[\]\{\}].
    Default: Network=Public
  PublicSubnetTag2:
    Type: String
    Description: >-
      (Optional) Tag to add to public subnets, in format 'key=value'.
    AllowedPattern: ^([a-zA-Z0-9+\-._:/@]+=[a-zA-Z0-9+\-.,_:/@ *\\"'\[\]\{\}]*)?$
    ConstraintDescription: >-
      Tags must be in format 'key=value'. Keys can contain only
      [a-zA-Z0-9+\-._:/@]. Values can contain
      [a-zA-Z0-9+\-._:/@ *\\"'\[\]\{\}].
    Default: ''
  VPCCIDR:
    Type: String
    Description: CIDR block for the VPC.
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: >-
      CIDR block parameter must be in the form x.x.x.x/16-28.
    Default: 10.10.0.0/16
  VPCFlowLogsCloudWatchKMSKey:
    Type: String
    Description: >-
      (Optional) KMS key ARN to use for encrypting the VPC flow logs data. If
      empty, encryption is enabled with CloudWatch Logs managing the
      server-side encryption keys.
    AllowedPattern: ^$|^arn:aws(-cn)?:kms:[a-z0-9-]+:\d{12}:key\/[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}$
    ConstraintDescription: >-
      Invalid KMS ARN or attempting to use in GovCloud. The AWS::Logs::LogGroup
      CloudFormation resource does not yet support the KmsKeyId property in
      GovCloud. Key ARN example:
      'arn:aws:kms:us-east-2:111122223333:key/1234abcd-12ab-34cd-56ef-1234567890ab'.
    Default: ''
  VPCFlowLogsLogFormat:
    Type: String
    Description: >-
      The fields to include in the flow log record, in the order in which they
      should appear. Specify the fields using the ${field-id} format, separated
      by spaces. The default format is used as the default value.
    AllowedPattern: ^(\$\{[a-z-]+\})$|^((\$\{[a-z-]+\} )*\$\{[a-z-]+\})$
    Default: >-
      ${version} ${account-id} ${interface-id} ${srcaddr} ${dstaddr} ${srcport} ${dstport} ${protocol} ${packets} ${bytes} ${start} ${end} ${action}
      ${log-status}
  VPCFlowLogsLogGroupRetention:
    Type: String
    Description: Number of days to retain the VPC flow logs in CloudWatch.
    AllowedValues: [1, 3, 5, 7, 14, 30, 60, 90, 120, 150, 180, 365, 400, 545, 731, 1827, 3653]
    Default: 14
  VPCFlowLogsMaxAggregationInterval:
    Type: String
    Description: >-
      The maximum interval of time during which a flow of packets is captured
      and aggregated into a flow log record. You can specify 60 seconds (1
      minute) or 600 seconds (10 minutes).
    AllowedValues:
      - 60
      - 600
    Default: 600
  VPCFlowLogsTrafficType:
    Type: String
    Description: >-
      The type of traffic to log. You can log traffic that the resource accepts
      or rejects, or all traffic.
    AllowedValues:
      - ACCEPT
      - ALL
      - REJECT
    Default: REJECT
  VPCTenancy:
    Type: String
    Description: The allowed tenancy of instances launched into the VPC.
    AllowedValues:
      - default
      - dedicated
    Default: default
Rules:
  NAT:
    RuleCondition: !Equals [!Ref CreateNATGateways, 'true']
    Assertions:
      - Assert: !And
          - !Equals [!Ref CreatePrivateSubnets, 'true']
          - !Equals [!Ref CreatePublicSubnets, 'true']
        AssertDescription: >-
          To enable NAT gateways, both CreatePrivateSubnets and
          CreatePublicSubnets must be set to 'true'.
  Subnets:
    Assertions:
      - Assert: !Or
          - !Equals [!Ref CreatePrivateSubnets, 'true']
          - !Equals [!Ref CreatePublicSubnets, 'true']
        AssertDescription: >-
          At least one of CreatePublicSubnets or CreatePrivateSubnets must be
          set to 'true'.
Conditions:
  3AZCondition: !Or
    - !Equals [!Ref NumberOfAZs, '3']
    - !Condition 4AZCondition
  4AZCondition: !Equals [!Ref NumberOfAZs, '4']
  NATGatewaysCondition: !Equals [!Ref CreateNATGateways, 'true']
  EURegionCondition: !Equals [!Ref AWS::Region, eu-west-2]
  PrivateSubnetsCondition: !Equals [!Ref CreatePrivateSubnets, 'true']
  PrivateSubnets&3AZCondition: !And
    - !Condition PrivateSubnetsCondition
    - !Condition 3AZCondition
  PrivateSubnets&4AZCondition: !And
    - !Condition PrivateSubnetsCondition
    - !Condition 4AZCondition
  PublicSubnetsCondition: !Equals [!Ref CreatePublicSubnets, 'true']
  PublicSubnets&3AZCondition: !And
    - !Condition PublicSubnetsCondition
    - !Condition 3AZCondition
  PublicSubnets&4AZCondition: !And
    - !Condition PublicSubnetsCondition
    - !Condition 4AZCondition
  PublicSubnetsCondition: !Equals [!Ref CreatePublicSubnets, 'true']
  PrivateSubnetATag1Condition: !Not [!Equals [!Ref PrivateSubnetATag1, '']]
  PrivateSubnetATag2Condition: !Not [!Equals [!Ref PrivateSubnetATag2, '']]
  PublicSubnetTag1Condition: !Not [!Equals [!Ref PublicSubnetTag1, '']]
  PublicSubnetTag2Condition: !Not [!Equals [!Ref PublicSubnetTag2, '']]
  VPCFlowLogsCloudWatchKMSKeyCondition: !Not [!Equals [!Ref VPCFlowLogsCloudWatchKMSKey, '']]
  VPCFlowLogsToCloudWatchCondition: !Equals [!Ref CreateVPCFlowLogsToCloudWatch, 'true']
  GlobalTag1Condition: !Not [!Equals [!Ref GlobalTag1, '']]
  GlobalTag2Condition: !Not [!Equals [!Ref GlobalTag2, '']]
  GlobalTag3Condition: !Not [!Equals [!Ref GlobalTag3, '']]
  ShouldCreateInternetGateway: !Equals [!Ref CreateInternetGateway, "true"]
  PublicSubnetsCondition&ShouldCreateInternetGateway: !And
    - !Condition PublicSubnetsCondition
    - !Condition ShouldCreateInternetGateway
  NATGateways&PublicSubnets&PrivateSubnetsCondition: !And
    - !Condition NATGatewaysCondition
    - !Condition PublicSubnetsCondition
    - !Condition PrivateSubnetsCondition
    - !Condition PublicSubnetsCondition&ShouldCreateInternetGateway
  NATGateways&PublicSubnets&PrivateSubnets&3AZCondition: !And
    - !Condition NATGatewaysCondition
    - !Condition PublicSubnetsCondition
    - !Condition PrivateSubnetsCondition
    - !Condition 3AZCondition
    - !Condition PublicSubnetsCondition&ShouldCreateInternetGateway
  NATGateways&PublicSubnets&PrivateSubnets&4AZCondition: !And
    - !Condition NATGatewaysCondition
    - !Condition PublicSubnetsCondition
    - !Condition PrivateSubnetsCondition
    - !Condition 4AZCondition
    - !Condition PublicSubnetsCondition&ShouldCreateInternetGateway
Resources:
  DHCPOptions:
    Type: AWS::EC2::DHCPOptions
    Properties:
      DomainName: !If [EURegionCondition, ec2.internal, !Sub '${AWS::Region}.compute.internal']
      DomainNameServers:
        - AmazonProvidedDNS
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} stack DHCPOptions
        - Key: StackName
          Value: !Ref AWS::StackName
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCIDR
      InstanceTenancy: !Ref VPCTenancy
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref AWS::StackName
        - !If
          - GlobalTag1Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag1]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag1]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag2Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag2]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag2]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag3Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag3]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag3]]
          - !Ref AWS::NoValue
  VPCDHCPOptionsAssociation:
    Type: AWS::EC2::VPCDHCPOptionsAssociation
    Properties:
      VpcId: !Ref VPC
      DhcpOptionsId: !Ref DHCPOptions
  InternetGateway:
    Condition: PublicSubnetsCondition&ShouldCreateInternetGateway
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref AWS::StackName
        - !If
          - GlobalTag1Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag1]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag1]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag2Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag2]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag2]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag3Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag3]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag3]]
          - !Ref AWS::NoValue
  VPCGatewayAttachment:
    Condition: PublicSubnetsCondition&ShouldCreateInternetGateway
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !If
        - PublicSubnetsCondition&ShouldCreateInternetGateway
        - !Ref InternetGateway
        - !Ref AWS::NoValue
  PrivateSubnet1A:
    Condition: PrivateSubnetsCondition
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet1ACIDR
      AvailabilityZone: !Select [0, !Ref AvailabilityZones]
      Tags:
        - Key: Name
          Value: Private subnet 1A
        - !If
          - GlobalTag1Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag1]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag1]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag2Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag2]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag2]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag3Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag3]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag3]]
          - !Ref AWS::NoValue
        - !If
          - PrivateSubnetATag1Condition
          - Key: !Select [0, !Split ['=', !Ref PrivateSubnetATag1]]
            Value: !Select [1, !Split ['=', !Ref PrivateSubnetATag1]]
          - !Ref AWS::NoValue
        - !If
          - PrivateSubnetATag2Condition
          - Key: !Select [0, !Split ['=', !Ref PrivateSubnetATag2]]
            Value: !Select [1, !Split ['=', !Ref PrivateSubnetATag2]]
          - !Ref AWS::NoValue
  PrivateSubnet2A:
    Condition: PrivateSubnetsCondition
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet2ACIDR
      AvailabilityZone: !Select [1, !Ref AvailabilityZones]
      Tags:
        - Key: Name
          Value: Private subnet 2A
        - !If
          - GlobalTag1Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag1]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag1]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag2Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag2]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag2]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag3Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag3]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag3]]
          - !Ref AWS::NoValue
        - !If
          - PrivateSubnetATag1Condition
          - Key: !Select [0, !Split ['=', !Ref PrivateSubnetATag1]]
            Value: !Select [1, !Split ['=', !Ref PrivateSubnetATag1]]
          - !Ref AWS::NoValue
        - !If
          - PrivateSubnetATag2Condition
          - Key: !Select [0, !Split ['=', !Ref PrivateSubnetATag2]]
            Value: !Select [1, !Split ['=', !Ref PrivateSubnetATag2]]
          - !Ref AWS::NoValue
  PublicSubnet1:
    Condition: PublicSubnetsCondition
    Type: AWS::EC2::Subnet
    Metadata:
      cfn_nag:
        rules_to_suppress:
          - id: W33
            reason: >-
              (W33) EC2 Subnet should not have MapPublicIpOnLaunch set to true.
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet1CIDR
      AvailabilityZone: !Select [0, !Ref AvailabilityZones]
      Tags:
        - Key: Name
          Value: Public subnet 1
        - !If
          - GlobalTag1Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag1]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag1]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag2Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag2]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag2]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag3Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag3]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag3]]
          - !Ref AWS::NoValue
        - !If
          - PublicSubnetTag1Condition
          - Key: !Select [0, !Split ['=', !Ref PublicSubnetTag1]]
            Value: !Select [1, !Split ['=', !Ref PublicSubnetTag1]]
          - !Ref AWS::NoValue
        - !If
          - PublicSubnetTag2Condition
          - Key: !Select [0, !Split ['=', !Ref PublicSubnetTag2]]
            Value: !Select [1, !Split ['=', !Ref PublicSubnetTag2]]
          - !Ref AWS::NoValue
      MapPublicIpOnLaunch: true
  PublicSubnet2:
    Condition: PublicSubnetsCondition
    Type: AWS::EC2::Subnet
    Metadata:
      cfn_nag:
        rules_to_suppress:
          - id: W33
            reason: >-
              (W33) EC2 Subnet should not have MapPublicIpOnLaunch set to true.
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet2CIDR
      AvailabilityZone: !Select [1, !Ref AvailabilityZones]
      Tags:
        - Key: Name
          Value: Public subnet 2
        - !If
          - GlobalTag1Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag1]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag1]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag2Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag2]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag2]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag3Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag3]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag3]]
          - !Ref AWS::NoValue
        - !If
          - PublicSubnetTag1Condition
          - Key: !Select [0, !Split ['=', !Ref PublicSubnetTag1]]
            Value: !Select [1, !Split ['=', !Ref PublicSubnetTag1]]
          - !Ref AWS::NoValue
        - !If
          - PublicSubnetTag2Condition
          - Key: !Select [0, !Split ['=', !Ref PublicSubnetTag2]]
            Value: !Select [1, !Split ['=', !Ref PublicSubnetTag2]]
          - !Ref AWS::NoValue
      MapPublicIpOnLaunch: true
  PrivateSubnet1ARouteTable:
    Condition: PrivateSubnetsCondition
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: Private subnet 1A
        - Key: Network
          Value: Private
        - !If
          - GlobalTag1Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag1]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag1]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag2Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag2]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag2]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag3Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag3]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag3]]
          - !Ref AWS::NoValue
  PrivateSubnet1ARoute:
    Condition: NATGateways&PublicSubnets&PrivateSubnetsCondition
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateSubnet1ARouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway1
  PrivateSubnet1ARouteTableAssociation:
    Condition: PrivateSubnetsCondition
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1A
      RouteTableId: !Ref PrivateSubnet1ARouteTable
  PrivateSubnet2ARouteTable:
    Condition: PrivateSubnetsCondition
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: Private subnet 2A
        - Key: Network
          Value: Private
        - !If
          - GlobalTag1Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag1]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag1]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag2Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag2]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag2]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag3Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag3]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag3]]
          - !Ref AWS::NoValue
  PrivateSubnet2ARoute:
    Condition: NATGateways&PublicSubnets&PrivateSubnetsCondition
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateSubnet2ARouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway2
  PrivateSubnet2ARouteTableAssociation:
    Condition: PrivateSubnetsCondition
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2A
      RouteTableId: !Ref PrivateSubnet2ARouteTable
  PublicSubnetRouteTable:
    Condition: PublicSubnetsCondition
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: Public Subnets
        - Key: Network
          Value: Public
        - !If
          - GlobalTag1Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag1]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag1]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag2Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag2]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag2]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag3Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag3]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag3]]
          - !Ref AWS::NoValue
  PublicSubnetRoute:
    Condition: PublicSubnetsCondition&ShouldCreateInternetGateway
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicSubnetRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:  !If
        - PublicSubnetsCondition&ShouldCreateInternetGateway
        - !Ref InternetGateway
        - !Ref AWS::NoValue
  PublicSubnet1RouteTableAssociation:
    Condition: PublicSubnetsCondition
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicSubnetRouteTable
  PublicSubnet2RouteTableAssociation:
    Condition: PublicSubnetsCondition
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicSubnetRouteTable
  NAT1EIP:
    Condition: NATGateways&PublicSubnets&PrivateSubnetsCondition
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: NAT1EIP
        - !If
          - GlobalTag1Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag1]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag1]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag2Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag2]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag2]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag3Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag3]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag3]]
          - !Ref AWS::NoValue
  NAT2EIP:
    Condition: NATGateways&PublicSubnets&PrivateSubnetsCondition
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: NAT2EIP
        - !If
          - GlobalTag1Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag1]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag1]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag2Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag2]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag2]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag3Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag3]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag3]]
          - !Ref AWS::NoValue
  NATGateway1:
    Condition: NATGateways&PublicSubnets&PrivateSubnetsCondition
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NAT1EIP.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: NATGateway1
        - !If
          - GlobalTag1Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag1]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag1]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag2Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag2]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag2]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag3Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag3]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag3]]
          - !Ref AWS::NoValue
  NATGateway2:
    Condition: NATGateways&PublicSubnets&PrivateSubnetsCondition
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NAT2EIP.AllocationId
      SubnetId: !Ref PublicSubnet2
      Tags:
        - Key: Name
          Value: NATGateway2
        - !If
          - GlobalTag1Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag1]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag1]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag2Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag2]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag2]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag3Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag3]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag3]]
          - !Ref AWS::NoValue
  S3VPCEndpoint:
    Condition: PrivateSubnetsCondition
    Type: AWS::EC2::VPCEndpoint
    Metadata:
      cfn-lint:
        config:
          ignore_checks:
            - EIAMPolicyActionWildcard
            - EPolicyWildcardPrincipal
          ignore_reasons:
            EIAMPolicyActionWildcard: >-
              This is based on AWS documentation- filtering via bucket policy
              is generally preferred.
            EIAMPolicyWildcardResource: >-
              This is based on AWS documentation- filtering via bucket policy
              is generally preferred.
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Action: '*'
            Effect: Allow
            Resource: '*'
            Principal: '*'
      RouteTableIds:
        - !Ref PrivateSubnet1ARouteTable
        - !Ref PrivateSubnet2ARouteTable
      ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
      VpcId: !Ref VPC
  VPCFlowLogsRole:
    Condition: VPCFlowLogsToCloudWatchCondition
    Type: AWS::IAM::Role
    Properties:
      Description: Rights to publish VPC flow logs to CloudWatch Logs.
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action: sts:AssumeRole
            Principal:
              Service:
                - vpc-flow-logs.amazonaws.com
      Path: /
      Policies:
        - PolicyName: CloudWatchLogGroup
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Sid: CloudWatchLogs
                Effect: Allow
                Action:
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                  - logs:DescribeLogGroups
                  - logs:DescribeLogStreams
                Resource: !GetAtt VPCFlowLogsLogGroup.Arn
  VPCFlowLogsLogGroup:
    Condition: VPCFlowLogsToCloudWatchCondition
    Type: AWS::Logs::LogGroup
    Properties:
      RetentionInDays: !Ref VPCFlowLogsLogGroupRetention
      KmsKeyId: !If
        - VPCFlowLogsCloudWatchKMSKeyCondition
        - !Ref VPCFlowLogsCloudWatchKMSKey
        - !Ref AWS::NoValue
  VPCFlowLogsToCloudWatch:
    Condition: VPCFlowLogsToCloudWatchCondition
    Type: AWS::EC2::FlowLog
    Properties:
      LogDestinationType: cloud-watch-logs
      LogGroupName: !Ref VPCFlowLogsLogGroup
      DeliverLogsPermissionArn: !GetAtt VPCFlowLogsRole.Arn
      LogFormat: !Ref VPCFlowLogsLogFormat
      MaxAggregationInterval: !Ref VPCFlowLogsMaxAggregationInterval
      ResourceId: !Ref VPC
      ResourceType: VPC
      TrafficType: !Ref VPCFlowLogsTrafficType
      Tags:
        - Key: Name
          Value: VPC Flow Logs CloudWatch
        - !If
          - GlobalTag1Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag1]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag1]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag2Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag2]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag2]]
          - !Ref AWS::NoValue
        - !If
          - GlobalTag3Condition
          - Key: !Select [0, !Split ['=', !Ref GlobalTag3]]
            Value: !Select [1, !Split ['=', !Ref GlobalTag3]]
          - !Ref AWS::NoValue
Outputs:
  NAT1EIP:
    Condition: NATGateways&PublicSubnets&PrivateSubnetsCondition
    Description: NAT 1 IP address.
    Value: !Ref NAT1EIP
    Export:
      Name: !Sub ${AWS::StackName}-NAT1EIP
  NAT2EIP:
    Condition: NATGateways&PublicSubnets&PrivateSubnetsCondition
    Description: NAT 2 IP address.
    Value: !Ref NAT2EIP
    Export:
      Name: !Sub ${AWS::StackName}-NAT2EIP
  NATGateway1ID:
    Condition: NATGateways&PublicSubnets&PrivateSubnetsCondition
    Description: NATGateway 1 ID.
    Value: !Ref NATGateway1
    Export:
      Name: !Sub ${AWS::StackName}-NATGateway1
  NATGateway2ID:
    Condition: NATGateways&PublicSubnets&PrivateSubnetsCondition
    Description: NATGateway 2 ID.
    Value: !Ref NATGateway2
    Export:
      Name: !Sub ${AWS::StackName}-NATGateway2
  PrivateSubnet1ACIDR:
    Condition: PrivateSubnetsCondition
    Description: Private subnet 1A CIDR in Availability Zone 1.
    Value: !Ref PrivateSubnet1ACIDR
    Export:
      Name: !Sub ${AWS::StackName}-PrivateSubnet1ACIDR
  PrivateSubnet1AID:
    Condition: PrivateSubnetsCondition
    Description: Private subnet 1A ID in Availability Zone 1.
    Value: !Ref PrivateSubnet1A
    Export:
      Name: !Sub ${AWS::StackName}-PrivateSubnet1AID
  PrivateSubnet1ARouteTable:
    Condition: PrivateSubnetsCondition
    Description: Private subnet 1A route table.
    Value: !Ref PrivateSubnet1ARouteTable
    Export:
      Name: !Sub ${AWS::StackName}-PrivateSubnet1ARouteTable
  PrivateSubnet2ACIDR:
    Condition: PrivateSubnetsCondition
    Description: Private subnet 2A CIDR in Availability Zone 2.
    Value: !Ref PrivateSubnet2ACIDR
    Export:
      Name: !Sub ${AWS::StackName}-PrivateSubnet2ACIDR
  PrivateSubnet2AID:
    Condition: PrivateSubnetsCondition
    Description: Private subnet 2A ID in Availability Zone 2.
    Value: !Ref PrivateSubnet2A
    Export:
      Name: !Sub ${AWS::StackName}-PrivateSubnet2AID
  PrivateSubnet2ARouteTable:
    Condition: PrivateSubnetsCondition
    Value: !Ref PrivateSubnet2ARouteTable
    Description: Private subnet 2A route table.
    Export:
      Name: !Sub ${AWS::StackName}-PrivateSubnet2ARouteTable
  PublicSubnet1CIDR:
    Condition: PublicSubnetsCondition
    Description: Public subnet 1 CIDR in Availability Zone 1.
    Value: !Ref PublicSubnet1CIDR
    Export:
      Name: !Sub ${AWS::StackName}-PublicSubnet1CIDR
  PublicSubnet1ID:
    Condition: PublicSubnetsCondition
    Description: Public subnet 1 ID in Availability Zone 1.
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub ${AWS::StackName}-PublicSubnet1ID
  PublicSubnet2CIDR:
    Condition: PublicSubnetsCondition
    Description: Public subnet 2 CIDR in Availability Zone 2.
    Value: !Ref PublicSubnet2CIDR
    Export:
      Name: !Sub ${AWS::StackName}-PublicSubnet2CIDR
  PublicSubnet2ID:
    Condition: PublicSubnetsCondition
    Description: Public subnet 2 ID in Availability Zone 2.
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub ${AWS::StackName}-PublicSubnet2ID
  PublicSubnetRouteTable:
    Condition: PublicSubnetsCondition
    Description: Public subnet route table.
    Value: !Ref PublicSubnetRouteTable
    Export:
      Name: !Sub ${AWS::StackName}-PublicSubnetRouteTable
  S3VPCEndpoint:
    Condition: PrivateSubnetsCondition
    Description: S3 VPC Endpoint.
    Value: !Ref S3VPCEndpoint
    Export:
      Name: !Sub ${AWS::StackName}-S3VPCEndpoint
  VPCCIDR:
    Description: VPC CIDR.
    Value: !Ref VPCCIDR
    Export:
      Name: !Sub ${AWS::StackName}-VPCCIDR
  VPCID:
    Description: VPC ID.
    Value: !Ref VPC
    Export:
      Name: !Sub ${AWS::StackName}-VPCID
